fixing macbook bugs border and alignment

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -151,9 +151,13 @@
 }
 
   /*responsive*/
-  @media only screen and (min-device-width: 1002px) and (max-device-width: 1278px) {
+  @media only screen and (min-device-width: 1200px) and (max-device-width: 1350px) {
   
     .message {
-        font-size: 150px;
+        font-size: 120px;
+    }
+
+    .contacts_wrapper {
+        justify-content: flex-start;
     }
 }
